Don’t send the same message to the user that sent it. Instead, append the message directly as soon as they press enter

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 					e.preventDefault();
 					if (input.value) {
 						socket.emit('chat message', input.value);
+						sendMessage({ message: input.value, user: nickname });
 						input.value = '';
 					}
 				});
